<?xml version="1.0"?>
<package format="3">
  <name>vgraph_nav_ros2</name>
  <version>0.0.1</version>
  <description>The vgraph_nav package</description>
  <maintainer email="alpaca.zip@gmail.com">Kimihiro Mori</maintainer>
  <license>Apache 2.0</license>
  
  <!-- ビルドツール依存関係 -->
  <!--<buildtool_depend>ament_cmake</buildtool_depend>-->
  <!--<buildtool_depend>ament_cmake_python</buildtool_depend>-->

  <!-- ビルドおよび実行依存関係 -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>

  <!-- 実行依存関係 -->
  <exec_depend>amcl</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

